fix(add-item-overflow): ui overflow is still possible, but now you can access every control

--- a/www/app/add-item/add-item.less
+++ b/www/app/add-item/add-item.less
@@ -1,9 +1,17 @@
 #add-item
 {
 
+  ion-slide-box {
+    margin-bottom: 50px;
+  }
+
+  .slider-pager {
+    bottom: auto;
+  }
+
   .slider{
     position: inherit;
-
+    margin-bottom: 60px;
   }
   background: #faf1e2;
 
@@ -78,15 +86,23 @@
     }
   }
 
-    .prev{
+  .nav-buttons {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+
+    .prev {
       position: absolute;
-      bottom: 2%;
+      bottom: 7px;
       left: 5%;
     }
 
-    .next{
+    .next {
       position: absolute;
-      bottom: 2%;
+      bottom: 7px;
       right: 5%;
+    }
   }
 }
