--- a/www/app/item/item.less
+++ b/www/app/item/item.less
@@ -44,10 +44,11 @@
     font-weight: bold;
     font-style: italic;
     text-transform: capitalize;
-    min-height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
 
   .distance {
